@@ -1,5 +1,3 @@
-require 'rails_helper'
-
 # Feature: 'About' page
 #   As a visitor
 #   I want to visit an 'about' page
