@@ -1,5 +1,3 @@
-require 'rails_helper'
-
 # Feature: Home page
 #   As a visitor
 #   I want to visit a home page
