@@ -1,4 +1,3 @@
-require 'rails_helper'
 include Warden::Test::Helpers
 Warden.test_mode!
 
