@@ -1,5 +1,3 @@
-require 'rails_helper'
-
 # Feature: Sign up
 #   As a visitor
 #   I want to sign up
