@@ -1,5 +1,3 @@
-require 'rails_helper'
-
 describe User do
 
   before(:each) { @user = User.new(email: 'user@example.com') }
